new proj/src/objects/Customer_Quantity_Discount__c.object
<CustomObject>
    <fields>
        <fullName>GE_DE_Discount_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Discount Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GE_DE_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DE_Duns_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duns NUmber</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Quantity Discounts</relationshipLabel>
        <relationshipName>Customer_Quantity_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_DE_External_ID__c</fullName>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DE_GO_Schedule__c</fullName>
        <label>GO Schedule</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DE_Maximum_Qty__c</fullName>
        <label>Maximum Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DE_Minimum_Qty__c</fullName>
        <label>Minimum Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DE_Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DE_Price_Level__c</fullName>
        <label>Price Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DE_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DE_Tier1__c</fullName>
        <label>Tier 1</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DE_Tier2__c</fullName>
        <label>Tier 2</label>
        <picklist>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DE_Tier3__c</fullName>
        <label>Tier 3</label>
        <picklist>
            <picklistValues>
                <fullName>Smart grid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer Quantity Discount</label>
    <nameField>
        <label>Customer Quantity Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Quantity Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>